--- a/less/home-page.less
+++ b/less/home-page.less
@@ -80,9 +80,10 @@ img {
         line-height: 2;
       }
     }
-    img {
+    .image {
+      display: flex;
+      align-items: center;
       width: 20%;
-      height: 20%;
     }
     h3 {
       border: 1px solid @main-border-color;
